--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ python-memcached==1.57
 python-magic==0.4.10
 django-rest-swagger==0.3.4
 uWSGI==2.0.11.2
+git+https://github.com/pythonforfacebook/facebook-sdk.git
